--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ModernCPP)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ModernCPP main.cpp Smart_Pointers.cpp Smart_Pointers.h Auto_Keyword.cpp Auto_Keyword.h Range_Based_For_Loops.cpp Range_Based_For_Loops.h Structured_Binding.cpp Structured_Binding.h Lvalue_Rvalue.cpp Lvalue_Rvalue.h Initialization_In_Class_Declaration.cpp Initialization_In_Class_Declaration.h Move_Semantics.cpp Move_Semantics.h)
+add_executable(ModernCPP main.cpp Smart_Pointers.cpp Smart_Pointers.h Auto_Keyword.cpp Auto_Keyword.h Range_Based_For_Loops.cpp Range_Based_For_Loops.h Structured_Binding.cpp Structured_Binding.h Lvalue_Rvalue.cpp Lvalue_Rvalue.h Initialization_In_Class_Declaration.cpp Initialization_In_Class_Declaration.h Move_Semantics.cpp Move_Semantics.h Defaulted_Deleted.cpp Defaulted_Deleted.h)
